objects/Navigation_Item__c.object
<CustomObject>
    <fields>
        <fullName>Filter_Criteria__c</fullName>
        <inlineHelpText>SOQL Filter Criteria. Use operators including =, !=, LIKE</inlineHelpText>
        <label>Filter Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Icon_Name__c</fullName>
        <label>Icon Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NavigationType__c</fullName>
        <label>NavigationType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>standard__namedPage</fullName>
                </value>
                <value>
                    <fullName>standard__navItemPage</fullName>
                </value>
                <value>
                    <fullName>standard__appPage</fullName>
                </value>
                <value>
                    <fullName>standard__recordPage</fullName>
                </value>
                <value>
                    <fullName>standard__objectPage</fullName>
                </value>
                <value>
                    <fullName>standard__recordRelationshipPage</fullName>
                </value>
                <value>
                    <fullName>standard__webPage</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <label>Object API Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PageName__c</fullName>
        <label>Page Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LandingPage</fullName>
                    <default>true</default>
                    <label>LandingPage</label>
                </value>
                <value>
                    <fullName>BusinessApps</fullName>
                </value>
                <value>
                    <fullName>EPC</fullName>
                </value>
                <value>
                    <fullName>CPQ</fullName>
                </value>
                <value>
                    <fullName>OM</fullName>
                </value>
                <value>
                    <fullName>DocumentGeneration</fullName>
                </value>
                <value>
                    <fullName>DIgitalCommerce</fullName>
                </value>
                <value>
                    <fullName>Omnistudio</fullName>
                </value>
                <value>
                    <fullName>Page2</fullName>
                    <isActive>false</isActive>
                    <label>Page2</label>
                </value>
                <value>
                    <fullName>Page3</fullName>
                    <isActive>false</isActive>
                    <label>Page3</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RelatedEntityAPIName__c</fullName>
        <inlineHelpText>Use only if Navigation Type = &quot;standard__recordRelationshipPage&quot;</inlineHelpText>
        <label>Related Entity API Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Detail__c</fullName>
        <label>Section Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Section_Heading__c</fullName>
        <label>Section Heading</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Target_App__c</fullName>
        <label>Target App</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_RecordId__c</fullName>
        <label>Target RecordId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Tab_Name__c</fullName>
        <label>Target Location</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Navigation Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PageName__c</columns>
        <columns>Section_Heading__c</columns>
        <columns>Sequence_Number__c</columns>
        <columns>Target_App__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>landing_Page_Items</fullName>
        <columns>NAME</columns>
        <columns>Section_Heading__c</columns>
        <columns>Sequence_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PageName__c</field>
            <operation>equals</operation>
            <value>LandingPage</value>
        </filters>
        <label>landing Page Items</label>
    </listViews>
    <nameField>
        <displayFormat>NI-{0000}</displayFormat>
        <label>Navigation Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Navigation Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Filter_Crieria_is_must</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(NavigationType__c , &apos;standard__recordPage&apos;) &amp;&amp; ISBLANK( Filter_Criteria__c )</errorConditionFormula>
        <errorDisplayField>Filter_Criteria__c</errorDisplayField>
        <errorMessage>Please enter filter criteria i.e.where clause to fetch the exact record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Related_Entity_is_must</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(NavigationType__c , &apos;standard__recordRelationshipPage&apos;) &amp;&amp; ISBLANK(RelatedEntityAPIName__c)</errorConditionFormula>
        <errorDisplayField>RelatedEntityAPIName__c</errorDisplayField>
        <errorMessage>Please enter the API name of Related object where you want to navigate</errorMessage>
    </validationRules>
</CustomObject>